--- a/package.json
+++ b/package.json
@@ -80,5 +80,17 @@
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
     "vite": "^5.4.19"
-  }
+  },
+  "description": "**URL**: https://lovable.dev/projects/f88d0675-22f8-4154-a665-7862ed93814a",
+  "main": "eslint.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/vitor-daniel015/jg-modas-vitrine-virtual.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/vitor-daniel015/jg-modas-vitrine-virtual/issues"
+  },
+  "homepage": "https://github.com/vitor-daniel015/jg-modas-vitrine-virtual#readme"
 }
